remove app-builder from app.yml added additional charts to dashboard change the calculation logic(transfer it form database to java)